# rateflix

./: .copilot  .gitignore  Makefile  README.md  dune  dune-project  manifest.json  popup.html  rateflix-server.opam  rateflix.opam
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deb.yml  release.yml
debian/: changelog  control  copyright  rateflix-server.cron.d  rateflix-server.fetch-data  rateflix-server.init  rateflix-server.nginx.conf  rateflix-server.postinst  rateflix-server.postrm  rateflix-server.rateflix-server-refresh.service  rateflix-server.rateflix-server-refresh.timer  rateflix-server.service  rules
plugin_build/: dune
server/: config.ml  database.ml  download.ml  dune  fuzzy_match.ml  handlers.ml  imdb_data.ml  main.ml  normalize.ml  rateflix_server.ml  rateflix_types.ml  server.ml  types.ml
src/: appletv.ml  backend.ml  chrome.ml  disneyplus.ml  dune  hbomax.ml  log.ml  main.ml  netflix.ml  omdb.ml  overlay.ml  plugin.ml  popup.ml  prime.ml  rateflix_client.ml  storage.ml  transparency.ml
test/: dune  test_cases.txt  test_fuzzy.sh  test_server.ml
