(rule
 (alias plugin)
 (targets plugin.stamp)
 (deps
  (:manifest manifest.json)
  (:popup_html popup.html)
  (:netflix_js src/netflix.bc.js)
  (:prime_js src/prime.bc.js)
  (:hbomax_js src/hbomax.bc.js)
  (:popup_js src/popup.bc.js)
  (:icon16 icons/icon16.png)
  (:icon32 icons/icon32.png)
  (:icon48 icons/icon48.png)
  (:icon128 icons/icon128.png)
 )
 (action
 (bash "set -euo pipefail\nrm -rf plugin\nmkdir -p plugin/icons\ncp %{manifest} plugin/manifest.json\ncp %{popup_html} plugin/popup.html\ncp %{netflix_js} plugin/netflix.bc.js\ncp %{prime_js} plugin/prime.bc.js\ncp %{hbomax_js} plugin/hbomax.bc.js\ncp %{popup_js} plugin/popup.bc.js\ncp %{icon16} plugin/icons/icon16.png\ncp %{icon32} plugin/icons/icon32.png\ncp %{icon48} plugin/icons/icon48.png\ncp %{icon128} plugin/icons/icon128.png\nprintf 'built plugin' > plugin.stamp\n")))
