(library
 (name normalize_lib)
 (modules normalize)
 (libraries uutf uunf uucp)
 (inline_tests)
 (preprocess (pps ppx_expect)))

(executable
 (name main)
 (public_name rateflix-server)
 (package rateflix-server)
 (modules :standard \ normalize)
 (libraries
   normalize_lib
   cohttp-eio
   eio
   eio_main
   uutf
   uunf
   uucp
   yojson
   cmdliner
   camlzip
   base
   spelll
 )
 (preprocess (pps ppx_deriving_yojson)))
