(library
 (name normalize)
 (modules normalize)
 (libraries uutf uunf uucp)
 (inline_tests)
 (preprocess (pps ppx_expect)))

(executable
 (name rateflix_server)
 (public_name rateflix-server)
 (package rateflix-server)
 (modules :standard \ normalize)
 (libraries
   normalize
   cohttp-eio
   eio
   eio_main
   uutf
   uunf
   uucp
   yojson
   cmdliner
   tls-eio
   ca-certs
   mirage-crypto-rng.unix
   decompress.gz
   base
   bin_prot
 )
 (preprocess (pps ppx_deriving_yojson ppx_bin_prot)))
