(executable
 (name netflix)
 (modules netflix)
 (modes js)
 (js_of_ocaml
  (flags --opt 3 --target-env browser)
  ;(compilation_mode whole_program)
 )
 (libraries js_of_ocaml js_of_ocaml-lwt lib)
 (preprocess (pps js_of_ocaml-ppx))
)

(executable
 (name prime)
 (modules prime)
 (modes js)
 (js_of_ocaml
  (flags --opt 3 --target-env browser)
  ;(compilation_mode whole_program)
 )
 (libraries js_of_ocaml js_of_ocaml-lwt lib)
 (preprocess (pps js_of_ocaml-ppx))
)

(executable
 (name hbomax)
 (modules hbomax)
 (modes js)
 (js_of_ocaml
  (flags --opt 3 --target-env browser)
  ;(compilation_mode whole_program)
 )
 (libraries js_of_ocaml js_of_ocaml-lwt lib)
 (preprocess (pps js_of_ocaml-ppx))
)

(executable
 (name popup)
 (modules popup)
 (modes js)
 (js_of_ocaml
  (flags --opt 3 --target-env browser)
  ;(compilation_mode whole_program)
 )
 (libraries js_of_ocaml lib)
 (preprocess (pps js_of_ocaml-ppx))
)

(library
 (name        lib)
 (modules     omdb storage chrome plugin log transparency)
 (libraries js_of_ocaml js_of_ocaml-lwt)
 (js_of_ocaml
  (flags --opt 3 --target-env browser)
 )
 (preprocess (pps js_of_ocaml-ppx ppx_deriving_yojson))
)
