(executables
 (names netflix prime hbomax appletv popup disneyplus)
 (modes js)
 (modules :standard \ omdb storage chrome plugin log transparency)
 (js_of_ocaml
  (flags --opt 3 --target-env browser)
  ;(compilation_mode whole_program)
 )
 (libraries js_of_ocaml js_of_ocaml-lwt lib)
 (preprocess (pps js_of_ocaml-ppx))
)

(library
 (name        lib)
 (modules     omdb storage chrome plugin log transparency)
 (libraries js_of_ocaml js_of_ocaml-lwt)
 (js_of_ocaml
  (flags --opt 3 --target-env browser)
 )
 (preprocess (pps js_of_ocaml-ppx ppx_deriving_yojson))
)
